# dangerdeep

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  ChangeLog  DEPLIST.txt  INSTALL  LICENSE  README  README.md  SConstruct  check.sh  dangerdeep.project  dangerdeep.workspace  dftd_icon.xpm  logo.xpm  makewinpack  run.sh  run_tests.sh  system_defines.h.in  valgrind-suppressions.supp
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  format.yml  lint.yml
cmake/modules/: FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindTinyXML.cmake  unity.cmake
cmake/modules/sdl2find/: findsdl2.tar.bz2
cmake/sdl3_compat/: SDL.h  SDL_config_win32.h  SDL_endian.h  SDL_types.h
dangerdeep/: CREDITS  ChangeLog  INSTALL  README  SConstruct  logo.xpm  makedatapackage.py  makedeb  makewinpack  test.sh  x
dangerdeep-site/: build.php  codeguide.fr.html  codeguide.html  dangerdeep-0.2.0.ebuild  dftd.css  documentation.fr.html  documentation.html  download.fr.html  download.html  features.fr.html  features.html  gallery.fr.html  gallery.html  help_out.fr.html  help_out.html  index.fr.html  index.html  links.fr.html  links.html  make_gallery.php  news.fr.html  news.html  vcpp_build_howto.fr.html  vcpp_build_howto.html  warning.fr.html  warning.html
dangerdeep-site/bits/en/: foot.html  head.html
dangerdeep-site/bits/fr/: head.html
dangerdeep-site/pages/en/: codeguide.html  documentation.html  download.html  features.html  gallery.html  help_out.html  index.html  links.html  news.html  warning.html
dangerdeep/doc/: TODO.txt  codeguide.tex  howto_vc_build.txt  simulate-flow.txt  skins.txt  sonar.tex
dangerdeep/packaging/: latestdeb.sh
dangerdeep/src/: 2dtest.cpp  Doxyfile  SConscript  ai.cpp  ai.h  airplane.cpp  airplane.h  airplane_interface.cpp  airplane_interface.h  align16_allocator.h  angle.h  binstream.h  bitstream.h  bivector.h  bivectortest.cpp  bspline.h  bspline_test.cpp  bv_tree.cpp  bv_tree.h  bvtreeintersecttest.cpp  bzip.cpp  bzip.h  caustics.cpp  caustics.h  cfg.cpp  cfg.h  coastmap.cpp  coastmap.h  color.h  condvar.cpp  condvar.h  convoy.cpp  convoy.h  countrycodes.h  credits.cpp  credits.h  damagemodel.cpp  datadirs.cpp  datadirs.h  date.cpp  (+211 more)
dangerdeep/suse/: dangerdeep.spec
dangerdeep/utils/: buildfonts.sh  buildmakefont.txt  makefont.cpp
data/convoys/: hx.xml  lm.xml  og.xml  sc.xml
data/environment/: stars_data.xml
data/flotillas/: available.xml
data/fonts/: font_arial.metric  font_jphsl.metric  font_typenr16.metric  font_vtremington10.metric  font_vtremington12.metric  font_vtremington14.metric  font_vtremington8.metric
data/maps/: default.xml  default_mapcoded.xcfbz2
data/menus/: keysmenu.xml  languagesmenu  languagesmenu.xml  mainmenu.xml  optionsmenu.xml
data/missions/: aegeanconvoy.xml  convoybattle.xml  flowertest.xml  singleship.xml
data/models/: conning_tower_typeVIIc.xml  depth_charge.ddxml  g7a_torpedo.ddxml  g7a_torpedo.phys  g7e_torpedo.ddxml  gun_shell.ddxml  test.xml
data/shaders/: billboardtrees.fshader  billboardtrees.vshader  blurview.fshader  blurview.vshader  bridge2a.fshader  bunker_lorient.fshader  bunker_lorient.vshader  charges.fshader  clouds.fshader  clouds.vshader  geoclipmap.fshader  geoclipmap.vshader  modelrender.fshader  modelrender.vshader  modelrender_mirrorclip.fshader  modelrender_mirrorclip.vshader  moon.fshader  moon.vshader  postp_combine.fshader  postp_combine2.fshader  postp_filter.fshader  postp_highpass.fshader  postp_null.vshader  reliefmapping.fshader  reliefmapping.vshader  sandrock.fshader  sandrock.vshader  schlick.fshader  schlick.vshader  treeleaves.fshader  treeleaves.vshader  under_water.fshader  under_water.vshader  videoplay.fshader  videoplay.vshader  water.fshader  water.vshader
data/sounds/: sound-categories.data
data/texts/: formats.csv
data/textures/: tex_grass.dds  tex_mud.dds  tex_sand.dds  tex_snow.dds  tex_stone.dds
doc/: dftd_torpedo_reference_rev.1.0.djvu  regioncodes.txt  translation.tex
doc/dangerdeep_manual_src/: dangerdeep_manual.sla
docs/: ARCHITECTURE.md  DEVELOPERS.md  REFACTORING.md  SDL3_MIGRATION.md  STD_ALTERNATIVES.md  STYLE_GUIDE.md  SUBSYSTEMS.md  TERRAIN_TILES.md  TESTING.md  TEST_COVERAGE.md
packaging/win32/: dangerdeep.rc
src/: 2dtest.cpp  CMakeLists.txt  ai.cpp  ai.h  airplane.cpp  airplane.h  airplane_interface.cpp  airplane_interface.h  align16_allocator.h  angle.h  audio_backend.h  audio_backend_sdl2.cpp  audio_backend_sdl3.cpp  binstream.h  bitstream.cpp  bitstream.h  bivector.h  bivectortest.cpp  bspline.h  bspline_test.cpp  bv_tree.cpp  bv_tree.h  bvtreeintersecttest.cpp  bzip.cpp  bzip.h  calc_cross_sections.sh  caustics.cpp  caustics.h  cfg.cpp  cfg.h  coast_renderer.cpp  coast_renderer.h  coastmap.cpp  coastmap.h  color.h  condvar.cpp  condvar.h  convoy.cpp  convoy.h  countrycodes.cpp  (+269 more)
src/Mac/: SDLMain.m
src/dftdtester/: Makefile.win  dftdtester.dev  glue.h  glue_x11.h  main.cpp  tests.cpp  tests.h  win32.cpp  win32.h  x11.cpp  x11.h
src/oglext/: CHANGELOG  Macros.h  OglExt.cpp  OglExt.h  RCHashArray.hpp  README  RenderingContext.cpp  RenderingContext.hpp  glext.h
src/test/: CATCH2_README.md  CMakeLists.txt  README  ai_test.cpp  airplane_interface_test.cpp  airplane_test.cpp  align16_allocator_test.cpp  angle_test.cpp  binstream_test.cpp  bitstream_test.cpp  bivector_test.cpp  bspline_test.cpp  bv_tree_leaf_test.cpp  bv_tree_test.cpp  bzip_test.cpp  catch_amalgamated.cpp  caustics_test.cpp  cfg_key_test.cpp  cfg_load_test.cpp  cfg_test.cpp  coast_renderer_test.cpp  coastmap_test.cpp  color_test.cpp  condvar_test.cpp  convoy_test.cpp  countrycodes_test.cpp  credits_test.cpp  datadirs_test.cpp  date_test.cpp  daysky_test.cpp  depth_charge_test.cpp  display_backend_stub.cpp  dmath_test.cpp  error_test.cpp  event_manager_stub.cpp  event_manager_test.cpp  event_stub.h  event_test.cpp  faulthandler_test.cpp  filehelper_test.cpp  (+112 more)
src/tinyxml/: tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
src/tools/: commandgen.py  ddxml-dump.py  erisExport.cpp  map_precompute.cpp
utils/: ddxml2oogl.py  makefont.cpp
(+384 files in other folders)
